# Django

./: pyproject.toml
quotes_project/: db.sqlite3
quotes_project/quotes/: models.py  urls.py  utils.py
quotes_project/quotes/migrations/: 0001_initial.py
quotes_project/quotes/static/quotes/: style.css
quotes_project/quotes/templates/quotes/: Austen.html  Edison.html  Einstein.html  Gide.html  Martin.html  Monroe.html  Roosevelt.html  Rowling.html  base.html  index.html
quotes_project/quotes_project/: settings.py  urls.py
quotes_project/users/: decorators.py  urls.py  views.py
quotes_project/users/templates/: add.html  change_password.html  login.html  register.html
quotes_project/utils/: authors.json  quotes.json
